# tiger-eye

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .zap-rules.tsv  Dockerfile  LICENSE  README.md  SECURITY.md  SYSTEM_DESIGN.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
grafana/dashboards/: tiger-eye.json
migrations/: 001_analysis_pgvector.sql  002_backfill_ttp_ids.sql  003_failed_enrichment.sql
tests/: conftest.py  test_analysis.py  test_api.py  test_dashboard.py  test_integration.py
tiger_eye/: analysis.py  config.py  dashboard_queries.py  database.py  embedding.py  logging_config.py  main.py  metrics.py  migrate.py  rag.py  tracing.py
tiger_eye/static/: dashboard.html
