[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tiger-eye"
version = "0.1.0"
description = "pgvector-native threat intelligence enrichment service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mike Harris" }]
keywords = ["threat-intelligence", "osint", "pgvector", "enrichment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

[project.urls]
Repository = "https://github.com/miketigerblue/tiger-eye"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (SAST)
    "A",    # flake8-builtins
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",   # assert used in tests
    "S104",   # binding to 0.0.0.0 — intentional for container deployment
    "S105",   # hardcoded passwords — false positives on default config strings
    "S106",   # same as S105
    "B008",   # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S311"]
"tiger_eye/migrate.py" = ["T201"]  # CLI tool — print is intentional

[tool.ruff.lint.isort]
known-first-party = ["tiger_eye"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "anyio: mark test as async",
]

# ---------------------------------------------------------------------------
# bandit
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]
